// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayProduct.create Throws on [] 1`] = `"ArrayProducts cannot be empty"`;

exports[`ArrayProduct<ProductA> .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
    },
    Object {
      "type": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
    },
  ],
  "type": "ArrayProduct",
}
`;

exports[`ArrayProduct<ProductA> Product.getProductType 1`] = `
Object {
  "elementType": Object {
    "id": Object {
      "full": "@escad-core-0-ProductA",
      "isId": true,
      "name": "ProductA",
      "packageName": "@escad/core",
      "version": "0",
    },
    "type": "LeafProductType",
  },
  "type": "ArrayProductType",
}
`;

exports[`Complex .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
    },
    Object {
      "children": Array [],
      "type": "TupleProduct",
    },
    Object {
      "children": Array [
        Object {
          "type": Object {
            "full": "@escad-core-0-ProductA",
            "isId": true,
            "name": "ProductA",
            "packageName": "@escad/core",
            "version": "0",
          },
        },
        Object {
          "type": Object {
            "full": "@escad-core-0-ProductA",
            "isId": true,
            "name": "ProductA",
            "packageName": "@escad/core",
            "version": "0",
          },
        },
      ],
      "type": "ArrayProduct",
    },
    Object {
      "children": Array [
        Object {
          "type": Object {
            "full": "@escad-core-0-ProductA",
            "isId": true,
            "name": "ProductA",
            "packageName": "@escad/core",
            "version": "0",
          },
        },
        Object {
          "type": Object {
            "full": "@escad-core-0-ProductB",
            "isId": true,
            "name": "ProductB",
            "packageName": "@escad/core",
            "version": "0",
          },
        },
        Object {
          "type": Object {
            "full": "@escad-core-0-ProductC",
            "isId": true,
            "name": "ProductC",
            "packageName": "@escad/core",
            "version": "0",
          },
        },
      ],
      "type": "TupleProduct",
    },
    Object {
      "product": Object {
        "type": Object {
          "full": "@escad-core-0-ProductB",
          "isId": true,
          "name": "ProductB",
          "packageName": "@escad/core",
          "version": "0",
        },
      },
      "type": "UnknownProduct",
    },
  ],
  "type": "TupleProduct",
}
`;

exports[`Complex Product.getProductType 1`] = `
Object {
  "elementTypes": Array [
    Object {
      "id": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
      "type": "LeafProductType",
    },
    Object {
      "elementTypes": Array [],
      "type": "TupleProductType",
    },
    Object {
      "elementType": Object {
        "id": Object {
          "full": "@escad-core-0-ProductA",
          "isId": true,
          "name": "ProductA",
          "packageName": "@escad/core",
          "version": "0",
        },
        "type": "LeafProductType",
      },
      "type": "ArrayProductType",
    },
    Object {
      "elementTypes": Array [
        Object {
          "id": Object {
            "full": "@escad-core-0-ProductA",
            "isId": true,
            "name": "ProductA",
            "packageName": "@escad/core",
            "version": "0",
          },
          "type": "LeafProductType",
        },
        Object {
          "id": Object {
            "full": "@escad-core-0-ProductB",
            "isId": true,
            "name": "ProductB",
            "packageName": "@escad/core",
            "version": "0",
          },
          "type": "LeafProductType",
        },
        Object {
          "id": Object {
            "full": "@escad-core-0-ProductC",
            "isId": true,
            "name": "ProductC",
            "packageName": "@escad/core",
            "version": "0",
          },
          "type": "LeafProductType",
        },
      ],
      "type": "TupleProductType",
    },
    Object {
      "type": "UnknownProductType",
    },
  ],
  "type": "TupleProductType",
}
`;

exports[`Product.getProductType Throw on invalid product 1`] = `"Invalid product passed to Product.getProductType"`;

exports[`ProductA .create 1`] = `
Object {
  "type": Object {
    "full": "@escad-core-0-ProductA",
    "isId": true,
    "name": "ProductA",
    "packageName": "@escad/core",
    "version": "0",
  },
}
`;

exports[`ProductA Product.getProductType 1`] = `
Object {
  "id": Object {
    "full": "@escad-core-0-ProductA",
    "isId": true,
    "name": "ProductA",
    "packageName": "@escad/core",
    "version": "0",
  },
  "type": "LeafProductType",
}
`;

exports[`TupleProduct<[]> .create 1`] = `
Object {
  "children": Array [],
  "type": "TupleProduct",
}
`;

exports[`TupleProduct<[]> Product.getProductType 1`] = `
Object {
  "elementTypes": Array [],
  "type": "TupleProductType",
}
`;

exports[`TupleProduct<[ProductA, ProductB]> .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
    },
    Object {
      "type": Object {
        "full": "@escad-core-0-ProductB",
        "isId": true,
        "name": "ProductB",
        "packageName": "@escad/core",
        "version": "0",
      },
    },
  ],
  "type": "TupleProduct",
}
`;

exports[`TupleProduct<[ProductA, ProductB]> Product.getProductType 1`] = `
Object {
  "elementTypes": Array [
    Object {
      "id": Object {
        "full": "@escad-core-0-ProductA",
        "isId": true,
        "name": "ProductA",
        "packageName": "@escad/core",
        "version": "0",
      },
      "type": "LeafProductType",
    },
    Object {
      "id": Object {
        "full": "@escad-core-0-ProductB",
        "isId": true,
        "name": "ProductB",
        "packageName": "@escad/core",
        "version": "0",
      },
      "type": "LeafProductType",
    },
  ],
  "type": "TupleProductType",
}
`;

exports[`UnknownProduct .create 1`] = `
Object {
  "product": Object {
    "type": Object {
      "full": "@escad-core-0-ProductB",
      "isId": true,
      "name": "ProductB",
      "packageName": "@escad/core",
      "version": "0",
    },
  },
  "type": "UnknownProduct",
}
`;

exports[`UnknownProduct Product.getProductType 1`] = `
Object {
  "type": "UnknownProductType",
}
`;

exports[`createLeafProductUtils .productType 1`] = `
Object {
  "id": Object {
    "full": "@escad-core-0-ProductA",
    "isId": true,
    "name": "ProductA",
    "packageName": "@escad/core",
    "version": "0",
  },
  "type": "LeafProductType",
}
`;

exports[`createLeafProductUtils Consistent keys 1`] = `
Array [
  "create",
  "id",
  "productType",
  "isProductA",
  "convert",
]
`;
